force-app/main/default/objects/leankor__ZoneKanbanAction__c/leankor__ZoneKanbanAction__c.object-meta.xml
<CustomObject>
    <description>This activity object captures all key state changes on a value stream between a set of zones and a set of kanban cards.</description>
    <label>ZoneKanban Action</label>
    <nameField>
        <displayFormat>ZKA-{0000000}</displayFormat>
        <label>ZoneKanban Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZoneKanban Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>