force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__ActionType2__c.field-meta.xml
<CustomField>
    <fullName>leankor__ActionType2__c</fullName>
    <description>The type of kanban card action related to the zone on the value stream.</description>
    <inlineHelpText>Select the action which best describes the kanban card activity just completed.</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entered Zone</fullName>
            </value>
            <value>
                <fullName>Left Zone</fullName>
            </value>
            <value>
                <fullName>Skipped Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>