force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__KanbanCard2__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The kanban card which crossed into the zone.</description>
    <inlineHelpText>Select the kanban card which crossed into the zone.</inlineHelpText>
    <label>Kanban Card</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions (Kanban Card)</relationshipLabel>
    <relationshipName>ZoneKanbanActions2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>