force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__MasterContainer__c.field-meta.xml
<CustomField>
    <fullName>leankor__MasterContainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Container which the kanban card crossed into.</description>
    <inlineHelpText>Master Container which the kanban card crossed into.</inlineHelpText>
    <label>Master Container</label>
    <referenceTo>leankor__MasterContainer__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions</relationshipLabel>
    <relationshipName>ZoneKanban_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>