force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__OtherMasterContainer__c.field-meta.xml
<CustomField>
    <fullName>leankor__OtherMasterContainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will contain Master Container ID for previous Master Container ID if type is &quot;EnterZone&quot; and New Master Container ID when Type is &quot;Left zone&quot;</description>
    <inlineHelpText>This will contain Master Container ID for previous Master Container ID if type is &quot;EnterZone&quot; and New Master Container ID when Type is &quot;Left zone&quot;</inlineHelpText>
    <label>Other Master Container</label>
    <referenceTo>leankor__MasterContainer__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions (Other Master Container)</relationshipLabel>
    <relationshipName>OtherMC_ZoneKanban</relationshipName>
    <type>Lookup</type>
</CustomField>