force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__OtherSwimlane__c.field-meta.xml
<CustomField>
    <fullName>leankor__OtherSwimlane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will contain Swimlane ID for previous Swimlane Id fi type is &quot;EnterZone&quot; and New swimlane when Type is &quot;Left zone&quot;</description>
    <inlineHelpText>This will contain Swimlane ID for previous Swimlane Id fi type is &quot;EnterZone&quot; and New swimlane when Type is &quot;Left zone&quot;</inlineHelpText>
    <label>OtherSwimlane</label>
    <referenceTo>leankor__Swimlane__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions (OtherSwimlane)</relationshipLabel>
    <relationshipName>OtherSW_ZoneKanban</relationshipName>
    <type>Lookup</type>
</CustomField>