force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__OtherZone__c.field-meta.xml
<CustomField>
    <fullName>leankor__OtherZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will contain Zone ID for previous Zone ID if type is &quot;EnterZone&quot; and New Zone ID when Type is &quot;Left zone&quot;</description>
    <inlineHelpText>This will contain Zone ID for previous Zone ID if type is &quot;EnterZone&quot; and New Zone ID when Type is &quot;Left zone&quot;</inlineHelpText>
    <label>Other Zone</label>
    <referenceTo>leankor__Zone__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions (Other Zone)</relationshipLabel>
    <relationshipName>OtherZone_ZoneKanban</relationshipName>
    <type>Lookup</type>
</CustomField>