force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__SessionID__c.field-meta.xml
<CustomField>
    <fullName>leankor__SessionID__c</fullName>
    <description>This field Contain Session ID On move kanban card.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field Contain Session ID On move kanban card.</inlineHelpText>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>