force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__Swimlane__c.field-meta.xml
<CustomField>
    <fullName>leankor__Swimlane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Swimlane which the kanban card crossed into.</description>
    <inlineHelpText>Swimlane which the kanban card crossed into.</inlineHelpText>
    <label>Swimlane</label>
    <referenceTo>leankor__Swimlane__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions</relationshipLabel>
    <relationshipName>ZoneKanban_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>