force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The value stream in which both the zone and the kaban card reside.</description>
    <inlineHelpText>Select the value stream which houses both the kanban card and the zone.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions</relationshipLabel>
    <relationshipName>ZoneKanbanActions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>