force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__WaitTime2__c.field-meta.xml
<CustomField>
    <fullName>leankor__WaitTime2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time taken by Kanban Card between Left and Enter the same zone (Time in Hours).</description>
    <inlineHelpText>Time taken by Kanban Card between Left and Enter the same zone (Time in Hours).</inlineHelpText>
    <label>Wait Time In Zone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>