force-app/main/default/objects/leankor__ZoneKanbanAction__c/fields/leankor__Zone2__c.field-meta.xml
<CustomField>
    <fullName>leankor__Zone2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Zone which the kanban card crossed into.</description>
    <inlineHelpText>Select the zone in which the kanban card resides.</inlineHelpText>
    <label>Moved into Zone</label>
    <referenceTo>leankor__Zone__c</referenceTo>
    <relationshipLabel>ZoneKanban Actions (Zone)</relationshipLabel>
    <relationshipName>ZoneKanbanActions2</relationshipName>
    <type>Lookup</type>
</CustomField>